# colorize-image

./: .gitignore  CMakeLists.txt  Makefile  README.md
data/: actor_marked.xcf  casual_marked.xcf  flower_marked.xcf  links.md  man_marked.xcf
include/: colorize.hpp
src/: Makefile  main.cpp  test.cpp  test_eigen.cpp
